--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@
 # Android operating system, and which are packaged with your app"s APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+# 表示将第三方库迁移到 AndroidX
+android.enableJetifier = true
